                    Changes made to Pyjamas since 0.6
                    ---------------------------------

 * Implemented NotImplementedType and NotImplemented

 * Implemented an int type and a long type

 * Add support for xrange and propper range (range was in fact an xrange)

 * Add support for multiple compare (0 < n < 4)

 * Add DoubleClickListener mixin

 * Add PUT and DELETE into XMLHttpRequest (thanks to Nick <thretwon@gmail.com>)

 * Added for in tuple

 * Added support for locals()

 * Added support for slice delete

 * Added support of slice assignment

 * Added support for IfExp (inline if expression)

 * Added support for generator expressions

 * Added support for any statement in class definition

 * Added support backquote

 * Added support for class definition anywhere

 * Re-enabled and fixed up pyv8run.py, which now successfully runs
   LibTest when translated to javascript (and passes 99.95%)

 * added support for Subscript Assignment in class definitions:
   class SubAssignBase(object):
       names['SubAssign'] = 'SubAssign'

 * Added support for generators (yield statement)

 * Added an substantial portion of re module

 * added isReadOnly and getReadOnly functions to FocusMixin, such that
   FocusPanel and FocusWidget both get that functionality (thanks to
   guenter walser)

 * Added --operator-funcs to enable non-number operation such as [1]+[2]

 * Added --inline-code to speedup eq/bool/len (saves expensive function calls)

 * All attributes are accessed as v['attr'] and not as v.attr anymore
   This circumvents a bug in IE with javascript keywords:
     (v.super is not allowed, but v['super'] is)

 * Added __cmp__ to dict class

 * Make compile options effective in runtime options

 * Added --keep-lib-files option

 * Added --dynamic option

 * Added dynamic loading of modules

 * Added builtin __import__ (only supports the first parameter)

 * make public subdirectory configurable at build time (thanks to Mathias Waack)
